Fixed visibility and startover errors

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
-.fullpage{
-    width: 98vw;
-    height: 100vh;
+body, .fullpage{
+    width: 96vw%;
+    height: 80vh%;
     display: flex;
     flex-direction: column;
     flex: 1 1 auto;
+    overflow: scroll;
 }
 
 
@@ -15,6 +16,7 @@ h1, h2, h3, h4, h5, h6{
     background-color: rgb(9, 9, 75);
     text-align: center;
     color: gold;
+    padding: 0.2rem;
 }
 
 .userinput{
@@ -105,6 +107,6 @@ font-weight: bolder;
     padding: 1rem;
 }
 
-#final{
+#final, #row2, #roundend{
     display: none;
 }
